configure reverse proxy to apps

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,34 @@
 version: "3"
 
+networks:
+  microfrontends:
+    driver: bridge
+
 services:
+  gateway:
+    build: ./nginx/
+    depends_on:
+      - static-app
+      - next-app
+    ports:
+      - "80:80"
+    networks:
+      - microfrontends
+
+  static-app:
+    build: ./static-app/
+    ports:
+      - "3001:80"
+    volumes:
+      - "./static-app:/var/www/localhost/htdocs"
+    networks:
+      - microfrontends
+
   next-app:
     build: ./next-app/
     ports:
       - "3000:3000"
     volumes:
       - "./next-app:/app"
-  
-  static-app:
-    build: ./static-app/
-    ports:
-      - "3001:80"
-    volumes:
-      - "./static-app:/app"
+    networks:
+      - microfrontends
